--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -203,7 +203,8 @@ jobs:
   
   
   create-cluster:
-     executor: aws-eks/python3
+     docker:
+        - image: 'cimg/python:3.10'
      parameters:
        cluster-name:
          description: |
