--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -222,6 +222,7 @@ jobs:
            nodes-max: 2
            ssh-access: false
            ssh-public-key: ''
+           no_output_timeout: 30m
   
   
   test-cluster:
