--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,7 @@ version: 2.1
 orbs:
   aws-eks: circleci/aws-eks@2.2.0
   kubernetes: circleci/kubernetes@1.3
+  docker: circleci/docker@2.1.4
 
 commands:
   destroy-environment:
@@ -21,28 +22,14 @@ commands:
 jobs:
 
 
+  lint:
+      executor: docker/machine
+      steps:
+        - checkout
+        - docker/dockerlint:
+            dockerfile: Dockerfile
+            treat-warnings-as-errors: true
 
-  lint : 
-    docker:
-
-      - image: docker:17.05.0-ce-git
-
-    steps:
-      - checkout
-      - setup_remote_docker:
-          version: 20.10.14
-          docker_layer_caching: true
-
-      - run:
-          name : lint docker file 
-          command : |
-            apk add --update openssl
-            wget -O /bin/hadolint https://github.com/hadolint/hadolint/releases/download/v1.16.3/hadolint-Linux-x86_64 &&\
-                chmod +x /bin/hadolint
-      - run:
-          name: run lint
-          command: |
-            hadolint Dockerfile
 
   build:
 
