--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -152,9 +152,10 @@ jobs:
           cluster-name: << parameters.cluster-name >>
           install-kubectl: true
       - kubernetes/create-or-update-resource:
-          get-rollout-status: false
+          get-rollout-status: true
           resource-file-path: eks_deployment.yml
           resource-name: deployment/udacity-capstone
+          watch-timeout: 15m
 
 
 workflows:
