--- a/eks_deployment.yml
+++ b/eks_deployment.yml
@@ -24,7 +24,7 @@ spec:
                 - arm64
       containers:
       - name: capstone-app
-        image: yaqot/nginixapp:latest
+        image: yaqot/nginixapp:blue
         ports:
         - name: http
           containerPort: 80
