--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -45,7 +45,7 @@ jobs:
       - run:
           name: Build application Docker image
           command: |
-            docker build  -t yaqot/nginixapp .
+            docker build  -t yaqot/nginixapp:blue .
             docker image ls
       - run:
           name: Save Docker image layer cache
